# PandaProject

./: .gitignore  CMakeLists.txt  DebugRenderDoc.cap  README.md  ReleaseRenderDoc.cap
code/Frameworks/: CMakeLists.txt
code/Frameworks/Base/: Assert.cpp  Assert.h  Base_File.cpp  Base_Input.cpp  Base_Input.h  Base_SharedPtr.h  Base_Thread.cpp  Base_Thread.h  Base_Time.cpp  Base_Time.h  Base_Types.h  Base_Utils.h  Base_Window.cpp  Base_Window.h  Base_glm.h  Base_imgui.h  CMakeLists.txt  File.cpp  File.h  Input.cpp  Input.h  Thread.cpp  Thread.h  Types.h  Utils.h  glmInclude.h
code/Frameworks/Base/private/: Base_Assert.cpp  Base_File.cpp  Base_Time.cpp  Base_Utils.cpp  Base_imgui.cpp
code/Frameworks/Base/public/: Base_Assert.h  Base_SlotVector.h  Base_Utils.h  Base_imgui.h
code/Frameworks/GameCore/: CMakeLists.txt
code/Frameworks/GameCore/old/: GameCore_CallbackGui.cpp  GameCore_CallbackGui.h  GameCore_Camera.cpp  GameCore_Gui.cpp  GameCore_PointLight.cpp  GameCore_PropManager.cpp  GameCore_SimpleGeometryProp.cpp  GameCore_glTFProp.cpp  GameCore_glTFProp.h
code/Frameworks/GameCore/private/: GameCore.cpp  GameCore_Assert.cpp  GameCore_Camera.cpp  GameCore_CameraManager.cpp  GameCore_Entity.cpp  GameCore_EntityCameraComponent.cpp  GameCore_EntityModule.cpp  GameCore_Facade.cpp  GameCore_File.cpp  GameCore_Graph.cpp  GameCore_Gui.cpp  GameCore_InputModule.cpp  GameCore_Module.cpp  GameCore_ModuleManager.cpp  GameCore_ModuleManager.h  GameCore_Precompile.h  GameCore_Prop.cpp  GameCore_PropManager.cpp  GameCore_TimeModule.cpp  GameCore_Utils.cpp  GameCore_WindowModule.cpp  GameCore_imgui.cpp
code/Frameworks/GameCore/public/: GameCore.h  GameCore_Assert.h  GameCore_Camera.h  GameCore_CameraManager.h  GameCore_Entity.h  GameCore_EntityCameraComponent.h  GameCore_EntityComponentSystem.h  GameCore_EntityModule.h  GameCore_EntityTransformComponent.h  GameCore_Facade.h  GameCore_Graph.h  GameCore_Gui.h  GameCore_InputModule.h  GameCore_Module.h  GameCore_PointLight.h  GameCore_Prop.h  GameCore_PropManager.h  GameCore_SimpleGeometryProp.h  GameCore_TimeModule.h  GameCore_Utils.h  GameCore_WindowModule.h
code/Frameworks/GameWork/: CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  DynamicProp.cpp  DynamicProp.h  Entity.cpp  Entity.h  GameWork.cpp  GameWork.h  GameWorkPrecompile.h  GameWork_CallbackGui.h  GameWork_Camera.cpp  GameWork_Camera.h  GameWork_CameraManager.cpp  GameWork_CameraManager.h  GameWork_ConsoleLog.cpp  GameWork_ConsoleLog.h  GameWork_Editor.cpp  GameWork_Editor.h  GameWork_Entity.h  GameWork_Graph.cpp  GameWork_Graph.h  GameWork_GraphEditor.cpp  GameWork_Gui.cpp  GameWork_Gui.h  GameWork_Module.h  GameWork_Prop.cpp  GameWork_Prop.h  GameWork_PropManager.cpp  GameWork_PropManager.h  GameWork_SimpleGeometryProp.cpp  GameWork_SimpleGeometryProp.h  GameWork_WindowManager.cpp  GameWork_WindowManager.h  GameWork_glTFProp.cpp  Gui.cpp  Gui.h  Module.h  PointLight.cpp  (+12 more)
code/Frameworks/GameWork/private/: GameWork.cpp  GameWork_CallbackGui.cpp  GameWork_Camera.cpp  GameWork_Entity.cpp  GameWork_Graph.cpp  GameWork_Gui.cpp  GameWork_PointLight.cpp  GameWork_Prop.cpp  GameWork_glTFProp.cpp
code/Frameworks/GameWork/public/: GameWork.h  GameWork_Graph.h  GameWork_Gui.h  GameWork_PointLight.h  GameWork_PropManager.h  GameWork_glTFProp.h
code/Frameworks/Render/: BasicRenderer.cpp  BasicRenderer.h  BasicRendererTuto.cpp  BasicRendererTuto.h  CMakeLists.txt  DummyModel.cpp  DummyModel.h  DummyRenderer.cpp  DummyRenderer.h  DummyVulkanPSO.cpp  DummyVulkanPSO.h  RenderCamera.h  RenderData.h  RenderFacade.cpp  RenderFacade.h  RenderLight.h  RenderModel.cpp  RenderModel.h  RenderPrecompile.cpp  RenderPrecompile.h  RenderRenderer.h  RenderSwapChain.cpp  RenderSwapChain.h  Render_Camera.cpp  Render_Camera.h  Render_Core.cpp  Render_Core.h  Render_DeferredRenderer.cpp  Render_DeferredRenderer.h  Render_EditorRenderer.cpp  Render_EditorRenderer.h  Render_Facade.cpp  Render_Facade.h  Render_Gui.cpp  Render_Gui.h  Render_GuiContainer.cpp  Render_GuiImpl.cpp  Render_GuiImpl.h  Render_GuiPipeline.cpp  Render_GuiPipeline.h  (+125 more)
code/Frameworks/Render/private/: Render_Core.cpp  Render_DescriptorContainer.cpp  Render_EditorRenderer.cpp  Render_Facade.cpp  Render_Gui.cpp  Render_Helpers.cpp  Render_ModelContainer.cpp  Render_PointLightsSet.cpp  Render_Precompile.h  Render_Resource.cpp  Render_ShaderHelpers.cpp  Render_SimpleGeometryModel.cpp  Render_VulkanBuffer.cpp  Render_VulkanDevice.cpp  Render_glTFTexture.cpp
code/Frameworks/Render/public/: Render_Camera.h  Render_Facade.h  Render_ModelContainer.h  Render_ModelData.h  Render_Resource.h  Render_VulkanBuffer.h  Render_glTFMaterial.h  Render_glTFModel.h
code/Game/: CMakeLists.txt
code/Game/Panda/: CMakeLists.txt  DummyGameObject.h  Map.cpp  Map.h  PandaModule.cpp  Perlin.cpp  Perlin.h
code/Game/PandaExe/: CMakeLists.txt  main.cpp
code/Games/: CMakeLists.txt
code/Games/Panda/: CMakeLists.txt  DummyGameObject.cpp  Map.cpp  PandaModule.cpp  PandaModule.h  Precompile.h  main.cpp
code/Games/RhythmShooter/: CMakeLists.txt  Precompile.h  RhythmShooterModule.cpp  RhythmShooterModule.h  main.cpp
code/Games/RhythmShooterExe/: CMakeLists.txt  main.cpp
code/Modules/: CMakeLists.txt
code/Modules/Editor/: CMakeLists.txt  Editor_EditorModule.cpp  Editor_EditorModule.h  Editor_GraphEditorCanvas.cpp  Editor_GraphEditorCanvas.h  Editor_Precompile.h
code/Modules/Editor/private/: Editor_EditorModule.cpp  Editor_GraphEditorCanvas.cpp  Editor_GraphEditorCanvas.h
code/Modules/Editor/public/: Editor_EditorModule.h
code/Modules/Render/: CMakeLists.txt  Render_EditorRenderer.cpp
data/: imgui.ini
data/Frameworks/shaders/: basicRenderer.vert  basicRendererTuto.frag  basicRendererTuto.vert  compile.bat  composition.frag  composition_frag.spv  debugForward_frag.spv  debugForward_vert.spv  gbuffer.frag  gbuffer.vert  gbuffer_frag.spv  gbuffer_vert.spv  glTFDefault.frag  glTFDefault.frag.spv  glTFDefault.vert  glTFDefault.vert.spv  shader.vert  transparent.frag  transparent.vert  transparent_frag.spv  transparent_vert.spv  vert.spv  (+5 more)
(+55 files in other folders)
